--- a/package.json
+++ b/package.json
@@ -1,16 +1,25 @@
 {
-  "private": true,
-  "scripts": {
-    "build": "turbo build",
-    "dev": "turbo dev",
-    "lint": "turbo lint",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\""
-  },
-  "devDependencies": {
-    "eslint": "^8.57.0",
-    "prettier": "^3.2.5",
-    "turbo": "^2.1.1"
-  },
-  "packageManager": "pnpm@8.15.6",
-  "name": "with-vite"
+	"private": true,
+	"scripts": {
+		"build": "turbo build",
+		"dev": "turbo dev",
+		"lint": "oxlint -D pedantic restriction suspicious correctness --fix --max-warnings 0 --disable-react-plugin",
+		"clean": "turbo clean && rm -rf node_modules",
+		"format": "biome format --write ."
+	},
+	"devDependencies": {
+		"@biomejs/biome": "^1.8.3",
+		"@changesets/cli": "^2.27.8",
+		"@commitlint/cli": "^19.4.1",
+		"@commitlint/config-conventional": "^19.4.1",
+		"@commitlint/config-lerna-scopes": "^19.0.0",
+		"@commitlint/types": "^19.0.3",
+		"conventional-changelog-atom": "^5.0.0",
+		"husky": "^9.1.5",
+		"lint-staged": "^15.2.10",
+		"oxlint": "^0.9.3",
+		"turbo": "^2.1.1"
+	},
+	"packageManager": "pnpm@9.7.0",
+	"name": "transactions-app"
 }
