--- a/turbo.json
+++ b/turbo.json
@@ -2,11 +2,32 @@
 	"$schema": "https://turbo.build/schema.json",
 	"tasks": {
 		"build": {
-			"dependsOn": ["^build"],
-			"inputs": ["$TURBO_DEFAULT$", ".env*"],
-			"outputs": ["dist/**"]
+			"dependsOn": [
+				"^build"
+			],
+			"inputs": [
+				"$TURBO_DEFAULT$",
+				".env*"
+			],
+			"outputs": [
+				"dist/**"
+			]
 		},
-		"lint": {},
+		"lint": {
+			"dependsOn": [
+				"^lint"
+			]
+		},
+		"format": {
+			"dependsOn": [
+				"^format"
+			]
+		},
+		"format:ci": {
+			"dependsOn": [
+				"^format:ci"
+			]
+		},
 		"dev": {
 			"cache": false,
 			"persistent": true
