--- a/.github/workflows/format.yaml
+++ b/.github/workflows/format.yaml
@@ -40,9 +40,5 @@ jobs:
       - name: Lint
         run: pnpm run lint
 
-      - name: Setup Biome
-        uses: biomejs/setup-biome@v2
-        with:
-          version: latest
-      - name: Run Biome
-        run: biome ci .
+      - name: Format
+        run: pnpm run format:ci
