--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -6,7 +6,9 @@
 	"scripts": {
 		"dev": "vite",
 		"build": "tsc -b && vite build",
-		"lint": "eslint .",
+		"lint": "biome lint --write .",
+		"format": "biome format --write .",
+		"format:ci": "biome check --write .",
 		"preview": "vite preview"
 	},
 	"dependencies": {
@@ -14,18 +16,12 @@
 		"react-dom": "^18.3.1"
 	},
 	"devDependencies": {
-		"@eslint/js": "^9.10.0",
+		"@biomejs/biome": "^1.8.3",
 		"@types/react": "^18.3.5",
 		"@types/react-dom": "^18.3.0",
 		"@vitejs/plugin-react-swc": "^3.7.0",
-		"eslint": "^9.10.0",
-		"eslint-plugin-react-hooks": "^5.1.0-rc.0",
-		"eslint-plugin-react-refresh": "^0.4.11",
-		"globals": "^15.9.0",
-		"oxlint": "^0.9.3",
 		"typescript": "^5.6.2",
-		"typescript-eslint": "^8.5.0",
 		"vite": "^5.4.3",
-		"vite-plugin-oxlint": "^1.0.5"
+		"vite-plugin-biome": "^1.0.12"
 	}
 }
