--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
 	"scripts": {
 		"build": "turbo build",
 		"dev": "turbo dev",
-		"lint": "oxlint -D pedantic restriction suspicious correctness --fix --max-warnings 0 --disable-react-plugin",
+		"lint": "turbo lint --",
+		"format": "turbo format",
+		"format:ci": "turbo format:ci",
 		"clean": "turbo clean && rm -rf node_modules",
-		"format": "biome format --write ."
+		"prepare": "husky"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "^1.8.3",
 		"@changesets/cli": "^2.27.8",
 		"@commitlint/cli": "^19.4.1",
 		"@commitlint/config-conventional": "^19.4.1",
@@ -17,7 +18,6 @@
 		"conventional-changelog-atom": "^5.0.0",
 		"husky": "^9.1.5",
 		"lint-staged": "^15.2.10",
-		"oxlint": "^0.9.3",
 		"turbo": "^2.1.1"
 	},
 	"packageManager": "pnpm@9.7.0",
