fix(ci): --no-frozen-lockfile

--- a/.github/workflows/commits.yaml
+++ b/.github/workflows/commits.yaml
@@ -39,7 +39,7 @@ jobs:
           cache: "pnpm"
 
       - name: Install dependencies
-        run: pnpm install
+        run: pnpm install --no-frozen-lockfile
 
       - name: Validate current commit (last commit) with commitlint
         if: github.event_name == 'push'
