--- a/.github/workflows/format.yaml
+++ b/.github/workflows/format.yaml
@@ -35,7 +35,7 @@ jobs:
           cache: "pnpm"
 
       - name: Install dependencies
-        run: pnpm install --no-frozen-lockfile
+        run: pnpm install
 
       - name: Lint
         run: pnpm run lint
