--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -23,6 +23,7 @@
     "@nestjs/common": "^10.4.1",
     "@nestjs/core": "^10.4.1",
     "@nestjs/platform-express": "^10.4.1",
+    "@nestjs/serve-static": "^4.0.2",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
