--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
 	"private": true,
 	"scripts": {
-		"build": "turbo build",
-		"dev": "turbo dev",
+		"build": "dotenv -- turbo build",
+		"dev": "dotenv -- turbo dev",
 		"lint": "turbo lint --",
 		"format": "turbo format",
 		"format:ci": "turbo format:ci",
@@ -21,5 +21,8 @@
 		"turbo": "^2.1.1"
 	},
 	"packageManager": "pnpm@9.7.0",
-	"name": "transactions-app"
+	"name": "transactions-app",
+	"dependencies": {
+		"dotenv-cli": "^7.4.2"
+	}
 }
