chore: edit tables location, add start script

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"private": true,
 	"scripts": {
+		"start": "dotenv -- turbo start",
 		"build": "dotenv -- turbo build",
 		"dev": "dotenv -- turbo dev",
 		"lint": "turbo lint --",
