--- a/packages/shared/tsconfig.json
+++ b/packages/shared/tsconfig.json
@@ -24,11 +24,19 @@
     "noUnusedParameters": true,
     "noPropertyAccessFromIndexSignature": true,
     "outDir": "dist",
+    "rootDir": "src",
     "baseUrl": ".",
     "paths": {
       "@/*": [
         "./src/*"
       ]
     }
-  }
+  },
+  "exclude": [
+    "node_modules",
+    "dist"
+  ],
+  "include": [
+    "src/**/*.ts"
+  ]
 }
