--- a/packages/shared/tsconfig.json
+++ b/packages/shared/tsconfig.json
@@ -1,31 +1,26 @@
 {
   "compilerOptions": {
-    "declaration": true,
-    "declarationMap": true,
-    "esModuleInterop": true,
-    "incremental": false,
-    "isolatedModules": true,
     "lib": [
-      "es2022"
+      "ES2022"
     ],
+    "target": "ES2021",
+    "removeComments": true,
     "module": "Preserve",
     "moduleDetection": "force",
-    "moduleResolution": "Bundler",
-    "noUncheckedIndexedAccess": true,
-    "resolveJsonModule": true,
-    "skipLibCheck": true,
-    "strict": true,
-    "target": "ES2022",
+    "allowJs": true,
+    "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
     "verbatimModuleSyntax": true,
     "noEmit": true,
+    "strict": true,
+    "skipLibCheck": true,
     "noFallthroughCasesInSwitch": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noPropertyAccessFromIndexSignature": true,
-    "outDir": "dist",
-    "rootDir": "src",
-    "baseUrl": ".",
+    "declaration": true,
+    "rootDir": "./src",
+    "outDir": "./dist",
     "paths": {
       "@/*": [
         "./src/*"
