--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -21,13 +21,17 @@
   },
   "dependencies": {
     "@nestjs/common": "^10.4.1",
+    "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.4.1",
+    "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.4.1",
     "@nestjs/serve-static": "^4.0.2",
-    "@store/shared": "workspace:*",
     "@paralleldrive/cuid2": "^2.2.2",
+    "@store/shared": "workspace:*",
+    "@types/pg": "^8.11.9",
     "drizzle-orm": "^0.33.0",
     "drizzle-zod": "^0.5.1",
+    "pg": "^8.12.0",
     "postgres": "^3.4.4",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
