--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -8,7 +8,6 @@
     "build": "tsc -b && vite build",
     "lint": "eslint -c eslint.config.js",
     "format": "prettier --write .",
-    "format:ci": "prettier --check .",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -22,7 +21,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@reduxjs/toolkit": "^2.2.7",
-    "@store/shared": "workspace:*",
+    "backend": "workspace:*",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.2.1",
