--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -34,6 +34,7 @@
     "@prisma/client": "^5.19.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "nestjs-cls": "^4.4.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
