--- a/turbo.json
+++ b/turbo.json
@@ -14,6 +14,24 @@
 				".env*"
 			]
 		},
+		"test": {
+			"dependsOn": [
+				"^test"
+			],
+			"inputs": [
+				"$TURBO_DEFAULT$",
+				".env*"
+			]
+		},
+		"test:watch": {
+			"dependsOn": [
+				"^test:watch"
+			],
+			"inputs": [
+				"$TURBO_DEFAULT$",
+				".env*"
+			]
+		},
 		"build": {
 			"dependsOn": [
 				"^build"
