--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -42,9 +42,8 @@
     "@nestjs/cli": "^10.4.5",
     "@nestjs/schematics": "^10.1.4",
     "@nestjs/testing": "^10.4.1",
-    "@ngneat/falso": "^7.2.0",
     "@snaplet/copycat": "^5.0.0",
-    "@snaplet/seed": "^0.98.0",
+    "@snaplet/seed": "0.98.0",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.13",
     "@types/node": "^20.3.1",
@@ -83,9 +82,9 @@
     "testEnvironment": "node"
   },
   "@snaplet/seed": {
-    "config": "prisma\\seed\\seed.config.ts"
+    "config": "seed.config.ts"
   },
   "prisma": {
-    "seed": "tsx ./prisma/seed/seed.ts"
+    "seed": "tsx ./seed.ts"
   }
 }
